# gist-cache-rs

./: .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintrc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  INSTALL.md  QUICKSTART.md  README.md  WORK_LOG_20251202.md  book.toml  justfile  test-protection.txt
.claude/docs/: feature_update_plan.md  feature_update_plan_config_and_run.md  interpreter_resolution_test_results.md
.github/: dependabot.yml
.github/workflows/: deploy-mdbook.yml  pre-commit-autoupdate.yml  release.yml
book/src/: README.md  SUMMARY.md
book/src/developer-guide/: architecture.md  coverage.md  gh-testing-evaluation.md  mdbook-setup.md  test-inventory.md  testing.md
book/src/test-specs/: test-results-summary.md  test-set-01-caching.md  test-set-02-search.md  test-set-03-interpreter.md  test-set-04-preview.md
book/src/user-guide/: configuration.md  examples.md  installation.md  quickstart.md  self-update.md  shell-completions.md
docs/: EXAMPLES.md  INSTALL.md  MDBOOK_SETUP.md  QUICKSTART.md  SELF-UPDATE.md
docs/testing/: COVERAGE.md  GH_TESTING_EVALUATION.md  TESTING.md  TEST_INVENTORY.md
docs/tests/: test_results_summary.md  test_set_01_caching.md  test_set_02_search.md  test_set_03_interpreter.md  test_set_04_preview.md
script/: setup.ps1  setup.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/cache/: content.rs  mod.rs  types.rs  update.rs
src/execution/: mod.rs  runner.rs
src/github/: api.rs  client.rs  mod.rs
src/search/: mod.rs  query.rs
src/self_update/: mod.rs  updater.rs
tests/: cli_tests.rs  integration_test.rs  runner_test.rs
tests/fixtures/: args_echo.ps1  args_echo.sh  error_exit.ps1  hello.js  hello.pl  hello.sh
