[package]
name = "gist-cache-rs"
version = "0.5.2"
edition = "2024"
rust-version = "1.85"

authors = ["7rikazhexde"]
description = "Interactive CLI tool for caching, searching, and executing GitHub Gists, built with Rust."
readme = "README.md"
license = "MIT"
repository = "https://github.com/7rikazhexde/gist-cache-rs"
keywords = ["gist", "cache", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target", "sample"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
colored = "3.0"
self_update = { version = "0.41", features = ["archive-tar"] }
self-replace = "1.5"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
assert_cmd = "2.0"
tempfile = "3.8"
predicates = "3.1"
mockall = "0.13.1"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
