[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}
colored = "3.0"
dirs = "6.0"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
tokio = {version = "1.35", features = ["full"]}

[dev-dependencies]
assert_cmd = "2.0"
mockall = "0.14.0"
predicates = "3.1"
serial_test = "3.0"
tempfile = "3.8"
tokio = {version = "1.35", features = ["macros", "rt-multi-thread"]}

[package]
authors = ["7rikazhexde"]
categories = ["command-line-utilities", "development-tools"]
description = "Interactive CLI tool for caching, searching, and executing GitHub Gists, built with Rust."
edition = "2024"
exclude = ["target", "sample"]
keywords = ["gist", "cache", "cli"]
license = "MIT"
name = "gist-cache-rs"
readme = "README.md"
repository = "https://github.com/7rikazhexde/gist-cache-rs"
rust-version = "1.85"
version = "0.6.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
